src/test/ui/closures/2229_closure_analysis/arrays-completely-captured.stderr
error[E0658]: attributes on expressions are experimental
  --> $DIR/arrays-completely-captured.rs:11:17
   |
LL |     let mut c = #[rustc_capture_analysis]
   |                 ^^^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #15701 <https://github.com/rust-lang/rust/issues/15701> for more information
   = help: add `#![feature(stmt_expr_attributes)]` to the crate attributes to enable

warning: the feature `capture_disjoint_fields` is incomplete and may not be safe to use and/or cause compiler crashes
  --> $DIR/arrays-completely-captured.rs:1:12
   |
LL | #![feature(capture_disjoint_fields)]
   |            ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: `#[warn(incomplete_features)]` on by default
   = note: see issue #53488 <https://github.com/rust-lang/rust/issues/53488> for more information

error: First Pass analysis includes:
  --> $DIR/arrays-completely-captured.rs:14:5
   |
LL | /     || {
LL | |
LL | |
LL | |         m[0] += 10;
...  |
LL | |         m[1] += 40;
LL | |     };
   | |_____^
   |
note: Capturing m[] -> MutBorrow
  --> $DIR/arrays-completely-captured.rs:17:9
   |
LL |         m[0] += 10;
   |         ^

error: Min Capture analysis includes:
  --> $DIR/arrays-completely-captured.rs:14:5
   |
LL | /     || {
LL | |
LL | |
LL | |         m[0] += 10;
...  |
LL | |         m[1] += 40;
LL | |     };
   | |_____^
   |
note: Min Capture m[] -> MutBorrow
  --> $DIR/arrays-completely-captured.rs:17:9
   |
LL |         m[0] += 10;
   |         ^

error: aborting due to 3 previous errors; 1 warning emitted

For more information about this error, try `rustc --explain E0658`.
